updating explanatory notes

--- a/Udemy Course Data Analyst Exercises/Integrating Software Resources/Predicting Absenteeism - Deploying the homemade module on the new data.ipynb
+++ b/Udemy Course Data Analyst Exercises/Integrating Software Resources/Predicting Absenteeism - Deploying the homemade module on the new data.ipynb
@@ -7,7 +7,9 @@
    "outputs": [],
    "source": [
     "from absenteeism_module import *\n",
-    "# this is our homemade module which includes everything we need to use on new data"
+    "\n",
+    "# this is our homemade module which includes everything we need to use on new data\n",
+    "# numpy, pandas and sklearn have been imported already along with the homemade module"
    ]
   },
   {
@@ -749,7 +751,8 @@
    ],
    "source": [
     "pd.read_csv('Absenteeism_new_data.csv')\n",
-    "# checks we are using the right data"
+    "\n",
+    "# importing the original csv to check the right data is being used"
    ]
   },
   {
@@ -759,8 +762,9 @@
    "outputs": [],
    "source": [
     "model = absenteeism_model('model', 'scaler')\n",
-    "# this is the name of the class that I have created Previously\n",
-    "# we must create an instance of this class, 2 in fact, model and scalar which I have previously created\n",
+    "\n",
+    "# this is the name of the class created previously, with an instance called 'model' containing 2 files,\n",
+    "# these are 'model' (finalised version of the logistic regression model) and 'scalar' (used to scale the values of the new data)\n",
     "# the instance of the absenteeism model class is now in a variable called 'model'"
    ]
   },
@@ -772,7 +776,9 @@
    },
    "outputs": [],
    "source": [
-    "model.load_and_clean_data('Absenteeism_new_data.csv')"
+    "model.load_and_clean_data('Absenteeism_new_data.csv')\n",
+    "\n",
+    "# from the module there is a class called 'load_and_clean_data' which does just that to the new data"
    ]
   },
   {
@@ -1596,19 +1602,18 @@
    ],
    "source": [
     "model.predicted_outputs()\n",
-    "# this feeds the new cleaned data into the model and deliver the new output"
+    "\n",
+    "# this feeds the new, cleaned data into the model to make predictions"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# 2 new columns on the far right (probability and prediction)\n",
-    "# the probability column contains float values which represent the probability that a given individual is expected...\n",
-    "# ... to be absent from work for more than 3 hours (excessively)\n",
-    "# the prediction column shows whether the probability obtained was 50% or higher (1) or lower (0) "
+    "#### Now we have 2 new columns appended (probability and prediction)\n",
+    "#### the probability column contains float values which represent the probability that a given individual is expected\n",
+    "#### to be absent from work for more than 3 hours (excessively),\n",
+    "#### the prediction column shows whether the probability obtained was 50% or higher (1) or lower (0)"
    ]
   },
   {
@@ -1618,7 +1623,8 @@
    "outputs": [],
    "source": [
     "model.predicted_outputs().to_csv('Absenteeism_predictions.csv', index = False)\n",
-    "# this code stores the new model in a csv file to be used elsewhere"
+    "\n",
+    "# this stores the model's predictions in a csv file to be used elsewhere"
    ]
   }
  ],
