--- a/Udemy Course Data Analyst Exercises/Integrating Software Resources/Predicting Absenteeism - Logistic Regression.ipynb
+++ b/Udemy Course Data Analyst Exercises/Integrating Software Resources/Predicting Absenteeism - Logistic Regression.ipynb
@@ -1491,117 +1491,117 @@
      "data": {
       "text/plain": [
        "[     Reason_1  Reason_2  Reason_3  Reason_4  Month Value  \\\n",
-       " 488         0         0         0         1     0.468236   \n",
-       " 163         1         0         0         0    -0.959313   \n",
-       " 503         0         0         0         1     0.753746   \n",
-       " 472         0         0         0         1     0.182726   \n",
-       " 231         1         0         0         0    -0.102784   \n",
+       " 60          0         0         0         1     0.753746   \n",
+       " 696         1         0         0         0    -0.388293   \n",
+       " 95          0         0         0         1     1.324766   \n",
+       " 396         0         0         0         1    -0.959313   \n",
+       " 439         1         0         0         0    -0.388293   \n",
        " ..        ...       ...       ...       ...          ...   \n",
-       " 219         0         0         0         1    -0.388293   \n",
-       " 559         0         0         0         1     1.610276   \n",
-       " 489         0         0         0         1     0.468236   \n",
-       " 437         0         0         0         1    -0.388293   \n",
-       " 653         0         0         0         1    -0.959313   \n",
+       " 224         1         0         0         0    -0.102784   \n",
+       " 132         0         0         0         1    -1.530333   \n",
+       " 441         0         0         0         1    -0.102784   \n",
+       " 15          1         0         0         0     0.182726   \n",
+       " 659         0         0         0         1    -0.673803   \n",
        " \n",
        "      Transportation Expense       Age  Body Mass Index  Education  Children  \\\n",
-       " 488               -0.654143  0.562059        -1.114186          1  0.880469   \n",
-       " 163                0.568211 -0.065439        -0.878984          0  2.679969   \n",
-       " 503                0.040034 -1.320435        -0.643782          0 -0.019280   \n",
-       " 472               -0.654143  0.248310         1.002633          0 -0.919030   \n",
-       " 231               -1.574681  2.130803         1.002633          0 -0.019280   \n",
+       " 60                -0.654143  0.248310         1.002633          0 -0.919030   \n",
+       " 696                0.040034 -1.320435        -0.643782          0 -0.019280   \n",
+       " 95                 0.040034 -1.320435        -0.643782          0 -0.019280   \n",
+       " 396               -0.654143  0.562059        -1.114186          1  0.880469   \n",
+       " 439                0.190942  0.091435         0.532229          1 -0.019280   \n",
        " ..                      ...       ...              ...        ...       ...   \n",
-       " 219                2.092381 -1.320435         0.061825          0 -0.019280   \n",
-       " 559                0.040034 -1.320435        -0.643782          0 -0.019280   \n",
-       " 489                1.624567 -1.320435        -0.408580          1 -0.919030   \n",
-       " 437               -0.654143 -1.006686        -1.819793          1 -0.919030   \n",
-       " 653                2.213108 -0.849811        -0.408580          0  1.780219   \n",
+       " 224                0.356940  0.718933        -0.878984          0 -0.919030   \n",
+       " 132               -0.578689 -1.477309        -1.349389          0 -0.919030   \n",
+       " 441               -1.574681  0.091435         0.297027          0 -0.919030   \n",
+       " 15                 0.356940  0.718933        -0.878984          0 -0.919030   \n",
+       " 659               -0.654143 -1.006686        -1.819793          1 -0.919030   \n",
        " \n",
        "          Pets  \n",
-       " 488 -0.589690  \n",
-       " 163 -0.589690  \n",
-       " 503  1.126663  \n",
-       " 472 -0.589690  \n",
-       " 231 -0.589690  \n",
+       " 60  -0.589690  \n",
+       " 696  1.126663  \n",
+       " 95   1.126663  \n",
+       " 396 -0.589690  \n",
+       " 439  0.268487  \n",
        " ..        ...  \n",
-       " 219  2.843016  \n",
-       " 559  1.126663  \n",
-       " 489 -0.589690  \n",
-       " 437 -0.589690  \n",
-       " 653 -0.589690  \n",
+       " 224 -0.589690  \n",
+       " 132 -0.589690  \n",
+       " 441 -0.589690  \n",
+       " 15  -0.589690  \n",
+       " 659 -0.589690  \n",
        " \n",
        " [525 rows x 11 columns],\n",
        "      Reason_1  Reason_2  Reason_3  Reason_4  Month Value  \\\n",
-       " 381         0         0         0         1    -1.244823   \n",
-       " 143         0         0         0         1    -1.244823   \n",
-       " 30          0         0         1         0     0.468236   \n",
-       " 479         0         0         0         1     0.182726   \n",
-       " 272         0         0         1         0     0.753746   \n",
+       " 185         0         0         0         1    -0.673803   \n",
+       " 19          0         0         0         1     0.468236   \n",
+       " 411         0         0         0         1    -0.959313   \n",
+       " 291         0         0         0         1     1.039256   \n",
+       " 264         0         0         0         1     0.468236   \n",
        " ..        ...       ...       ...       ...          ...   \n",
-       " 462         1         0         0         0     0.182726   \n",
-       " 615         0         0         0         1    -1.244823   \n",
-       " 549         0         0         0         0     1.324766   \n",
-       " 441         0         0         0         1    -0.102784   \n",
-       " 282         0         0         0         1     0.753746   \n",
+       " 410         0         0         1         0    -0.959313   \n",
+       " 568         0         0         0         1     1.610276   \n",
+       " 484         0         0         0         1     0.468236   \n",
+       " 435         0         0         0         1    -0.388293   \n",
+       " 62          0         0         0         1     1.039256   \n",
        " \n",
        "      Transportation Expense       Age  Body Mass Index  Education  Children  \\\n",
-       " 381               -0.654143  0.248310         1.002633          0 -0.919030   \n",
-       " 143                1.005844 -0.536062         0.767431          0  0.880469   \n",
-       " 30                -0.654143  0.248310         1.002633          0 -0.919030   \n",
-       " 479                0.854936  0.405184        -0.643782          0  0.880469   \n",
-       " 272                1.005844 -0.536062         0.767431          0  0.880469   \n",
+       " 185                0.040034 -1.320435        -0.643782          0 -0.019280   \n",
+       " 19                 0.387122  1.660180         1.237836          0  0.880469   \n",
+       " 411                0.356940  0.718933        -0.878984          0 -0.919030   \n",
+       " 291                1.005844 -0.536062         0.767431          0  0.880469   \n",
+       " 264                0.387122  1.660180         1.237836          0  0.880469   \n",
        " ..                      ...       ...              ...        ...       ...   \n",
-       " 462                0.568211 -0.065439        -0.878984          0  2.679969   \n",
-       " 615               -0.654143  0.248310         1.002633          0 -0.919030   \n",
-       " 549                1.005844 -0.536062         0.767431          0  0.880469   \n",
-       " 441               -1.574681  0.091435         0.297027          0 -0.919030   \n",
-       " 282                0.568211 -0.065439        -0.878984          0  2.679969   \n",
+       " 410                0.568211 -0.065439        -0.878984          0  2.679969   \n",
+       " 568                0.040034 -1.320435        -0.643782          0 -0.019280   \n",
+       " 484                1.005844 -0.536062         0.767431          0  0.880469   \n",
+       " 435                0.040034 -1.320435        -0.643782          0 -0.019280   \n",
+       " 62                -0.654143  0.248310         1.002633          0 -0.919030   \n",
        " \n",
        "          Pets  \n",
-       " 381 -0.589690  \n",
-       " 143  0.268487  \n",
-       " 30  -0.589690  \n",
-       " 479 -0.589690  \n",
-       " 272  0.268487  \n",
+       " 185  1.126663  \n",
+       " 19   0.268487  \n",
+       " 411 -0.589690  \n",
+       " 291  0.268487  \n",
+       " 264  0.268487  \n",
        " ..        ...  \n",
-       " 462 -0.589690  \n",
-       " 615 -0.589690  \n",
-       " 549  0.268487  \n",
-       " 441 -0.589690  \n",
-       " 282 -0.589690  \n",
+       " 410 -0.589690  \n",
+       " 568  1.126663  \n",
+       " 484  0.268487  \n",
+       " 435  1.126663  \n",
+       " 62  -0.589690  \n",
        " \n",
        " [175 rows x 11 columns],\n",
-       " array([1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0,\n",
-       "        0, 1, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0,\n",
-       "        1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0,\n",
-       "        1, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0, 1,\n",
-       "        0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0,\n",
-       "        1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 1,\n",
-       "        1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 1,\n",
-       "        1, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1,\n",
-       "        0, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1,\n",
-       "        1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0,\n",
-       "        0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0,\n",
-       "        1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 0, 0,\n",
-       "        0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0,\n",
-       "        0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 0, 0,\n",
-       "        1, 1, 1, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 0, 1,\n",
-       "        0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0, 0, 0, 1,\n",
-       "        0, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0,\n",
-       "        1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0,\n",
-       "        0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 0,\n",
-       "        0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0,\n",
-       "        1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0,\n",
-       "        1, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1,\n",
-       "        0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0,\n",
-       "        0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 1, 1, 0, 1, 1, 0, 1, 0, 1]),\n",
-       " array([0, 1, 1, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1,\n",
-       "        1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 1, 1, 0, 0, 1, 0, 0, 0,\n",
-       "        0, 0, 0, 1, 1, 1, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 1, 1, 1, 0, 1,\n",
-       "        0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0, 1, 0, 0, 0,\n",
-       "        0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1,\n",
-       "        1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1,\n",
-       "        1, 0, 1, 0, 1, 1, 0, 0, 1, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0,\n",
-       "        1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 0, 1])]"
+       " array([0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0,\n",
+       "        1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1,\n",
+       "        0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 0,\n",
+       "        1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 1, 0, 1,\n",
+       "        1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0,\n",
+       "        0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0,\n",
+       "        0, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0,\n",
+       "        1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 1, 1,\n",
+       "        0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0,\n",
+       "        0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0,\n",
+       "        0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 0, 0, 1, 1,\n",
+       "        1, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1,\n",
+       "        1, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 0,\n",
+       "        1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 1, 0, 1,\n",
+       "        1, 0, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 0, 1,\n",
+       "        1, 0, 0, 1, 1, 0, 0, 1, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1,\n",
+       "        1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1,\n",
+       "        0, 1, 0, 1, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0,\n",
+       "        0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1,\n",
+       "        1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1,\n",
+       "        0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0,\n",
+       "        1, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 1, 0, 1, 0, 1,\n",
+       "        1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 0, 0, 1, 0]),\n",
+       " array([0, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0, 1,\n",
+       "        1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0,\n",
+       "        1, 1, 0, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 0, 1, 1,\n",
+       "        1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 1,\n",
+       "        0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1,\n",
+       "        1, 1, 0, 1, 0, 0, 1, 0, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0,\n",
+       "        0, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1,\n",
+       "        1, 0, 1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0])]"
       ]
      },
      "execution_count": 27,
@@ -2625,26 +2625,68 @@
    ],
    "source": [
     "summary_table.sort_values('Odds_ratio', ascending=False)\n",
-    "# this sorts the table/dataframe by the odds ratio in descending order\n",
     "\n",
-    "# to interpret this, \n",
-    "# if the coef is around 0 OR,\n",
-    "# it's odds ratio is around 1,\n",
-    "# this means the corresponding feature is less important than others"
+    "# this sorts the table/dataframe by the odds ratio in descending order"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 50,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# the results show that the 4 reasons are the most important features:\n",
-    "# the odds ratio show the odds of someone being excessively absent after the reason occurs are:\n",
-    "# Reason 1 = various diseases (16.5 times more likely)\n",
-    "# Reason 2 = pregnancy and giving birth (2.6 times more likely)\n",
-    "# Reason 3 = poisoning (22.6 times more likely)\n",
-    "# Reason 4 = Light diseases (2.3 times more likely)\n"
+    "### Summary Table Explained"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### The intercept (bias) is used to get more accurate predictions, we can't actually interpret it but\n",
+    "##### it calibrates the model (helps to standardise it).\n",
+    "##### Without the intercept, each prediction will be off the mark by precisely that value.\n",
+    "\n",
+    "\n",
+    "##### A feature is NOT important if it's coefficient is close to 0 nor if it's odds ratio is close to 1.\n",
+    "##### The further away from 0 a coefficient is, the biggger that feature's importance is.\n",
+    "##### A weight (coefficient) of 0 implies that no matter the feature, we multiply it by 0 in the model.\n",
+    "##### For a unit change in the standardized feature, the odds increase by a multiple equal to the odds ratio\n",
+    "##### (1 = no change, 0.1 = 90% reduction, 1.1 = 10% increase).\n",
+    "\n",
+    "##### If odds were 5:1 and odds ratio was 2 then new odds for a single unit change will be 10:1\n",
+    "##### If odds were 5:1 and odds ratio was 0.2 then new odds for a single unit change will be 1:1\n",
+    "##### If odds were 5:1 and odds ratio was 1 then new odds for a single unit change will be 5:1 as odds haven't changed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Backwards Elimination:\n",
+    "\n",
+    "##### The idea is to simplify our model by removing all features which have close to no contribution to the model.\n",
+    "##### E.g. when we have p-values, we get rid of all coefficients with p-values above > 0.05.\n",
+    "##### When using sklearn we don't have p-values as they aren't really needed.\n",
+    "##### If the weight is small enough, it won't make a difference.\n",
+    "##### If we remove these variables, the rest of our model won't change in terms of it's coefficient values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary of Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### The results show that the 4 reasons are the most important features\n",
+    "##### (in descending order of importance):\n",
+    "\n",
+    "##### Reason 3 = poisoning (22.6 times more likely)\n",
+    "##### Reason 1 = various diseases (16.5 times more likely)\n",
+    "##### Reason 2 = pregnancy and giving birth (2.6 times more likely)\n",
+    "##### Reason 4 = Light diseases (2.3 times more likely)"
    ]
   },
   {
@@ -2840,7 +2882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2849,7 +2891,7 @@
        "(140, 2)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
